Fixed one bug and one problem with text
The bug was in the recently added function to
determine if currently is day or night in the
place that the user search for. The problem was
that the sunny and clear days didnt share the same
weatherText property, like the others did.
So i have to add a function called
changeWeatherText() to swap them if needed. It is
inside the isDayOrNight() function in the display
file.

The other problem was that some of the weather
text was just too large. For that i created
the function stringLength() that get the text, its
length and then sort all of them. Then add a
function stringCut() with just a switch that take
care of the larger texts and repalce them for
other shorter. This stringCut function is in the
dom file, witihin the functions that set the data.

Also, i changed the font-size in the CSS for the
hour containers, to make it easier for the weather
text to fit in.

--- a/src/style.css
+++ b/src/style.css
@@ -500,7 +500,7 @@ aside {
 
 .slider .container-2.show {
     opacity: 1;
-    animation: up-to-down linear 1s forwards;
+    animation: up-to-down linear 1s .1s forwards;
 }
 
 /* POR ESO ESTA MEDIA QUERY ES INNECESARIA, YA QUE NO SE AGRANDA MAS A PARTIR DEL 1.2REM  */
@@ -557,7 +557,7 @@ aside {
     text-align: center;
 
     /* RESPONSIVE WIDTH */
-    width: max(30%, 5.5rem);
+    width: max(35%, 5.5rem);
 }
 
 .card-aside .time {
@@ -588,8 +588,7 @@ aside {
 
     .card-aside p {
         /* RESPONSIVE FONT */
-        /* ACA POR EJEMPLO SE AGRANDA UN PELIN MAS RAPIDO, CON .5 MAS DE VW */
-        font-size:  clamp(1rem, 1.9vw + .5rem, 1.3rem); 
+        font-size:  clamp(1rem, 1.5vw + .5rem, 1.2rem); 
     };
 
    .card-aside img {
